--- a/frontend/zulu/src/App.css
+++ b/frontend/zulu/src/App.css
@@ -16,6 +16,18 @@
   color: white;
 }
 
+.buttons-container {
+  position: absolute;
+  z-index: 2;
+  pointer-events: auto !important;
+}
+
+.map-window {
+  height: 100vh;
+  width: 100vw;
+  z-index: 1;
+}
+
 .App-intro {
   font-size: large;
 }
