--- a/frontend/zulu/src/components/LoginForm/Login.css
+++ b/frontend/zulu/src/components/LoginForm/Login.css
@@ -1,14 +1,26 @@
 @media all and (min-width: 30px) {
     .Login {
-        padding: 40px 0;
-        /*margin-left: 30%;*/
-        float: left;
+        padding: 40px ;
 
     }
 
     .Login form {
-        font-family: "r sfs10";
-        margin: 20px;
-        max-width: 50%;
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px ;
+        display: inline-block;
+        border: 10px solid #ccc;
+        box-sizing: border-box;
+    }
+    .btn{
+        background-color: #4CAF50;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        cursor: pointer;
+        width: 20%;
+    }
+    .label{
+        font-family:  serif;
     }
 }
