--- a/frontend/zulu/src/components/Map/Map.css
+++ b/frontend/zulu/src/components/Map/Map.css
@@ -4,8 +4,8 @@
 body,
 #root,
 .leaflet-container {
-    height: 100vh;
-    width: 100vw;
+    position: relative;
+    height: 90vh;
 }
 
 .zoom-slider {
