--- a/frontend/zulu/src/App.css
+++ b/frontend/zulu/src/App.css
@@ -43,3 +43,9 @@ label {
   -webkit-border-radius: 50%;
   border-radius: 50%;
 }
+#about .modal-content{
+  width: 100% !important;
+  text-align: left !important;
+  padding-left: 30px !important;
+  padding-right: 30px !important;
+}
