--- a/frontend/zulu/src/App.css
+++ b/frontend/zulu/src/App.css
@@ -47,6 +47,6 @@ label {
 #about .modal-content{
   width: 100% !important;
   text-align: left !important;
-  padding-left: 30px !important;
-  padding-right: 30px !important;
+  
+  padding: 30px !important;
 }
