--- a/frontend/zulu/src/App.css
+++ b/frontend/zulu/src/App.css
@@ -34,6 +34,7 @@ label {
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
+
 .profile-img-card {
   width: 96px;
   height: 96px;
@@ -42,4 +43,10 @@ label {
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
+}
+#about .modal-content{
+  width: 100% !important;
+  text-align: left !important;
+  
+  padding: 30px !important;
 }
