--- a/frontend/zulu/src/index.css
+++ b/frontend/zulu/src/index.css
@@ -1,9 +1,10 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
+
 .leaflet-popup-tip {
-  width: 0px;
-  height: 0px;
+    width: 0;
+    height: 0;
 }
